<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	<item android:id="@+id/action_update"
        android:title="@string/action_update"
        android:icon="@drawable/action_update"
        android:orderInCategory="1"
        android:showAsAction="always" />
	<item android:id="@+id/site_update" android:title="@string/site_update"></item>
	<item android:id="@+id/site_remove" android:title="@string/site_remove"></item>
	<item android:id="@+id/site_name_value" android:title="@string/site_name_value"></item>
	<item android:id="@+id/site_description_value" android:title="@string/site_description_value"></item>
	<item android:id="@+id/site_look_and_feel_value" android:title="@string/site_look_and_feel_value"></item>
	<item android:id="@+id/action_settings"
		    android:orderInCategory="100"
		    android:showAsAction="never"
		    android:title="@string/action_settings"/>
	
</menu>