<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/site" android:labelFor="0" android:tag="@string/site" 
	android:layout_width="match_parent"
	android:layout_height="match_parent" >
	<LinearLayout
		android:orientation="vertical"
		android:focusable="true"
		android:layout_width="match_parent"
    android:layout_height="wrap_content"
		android:scrollbarStyle="insideOverlay"
    android:scrollbars="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
	  <!-- Site.name field-->
      <LinearLayout android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" >
        <TextView android:id="@+id/site_name_label"
        	android:contentDescription="@string/site_name_label"
          android:tag="@string/site_name_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="left"
          style="?android:attr/textAppearanceMedium"
          android:textIsSelectable="true"
          android:textColor="#ffffff" />
        <ImageButton android:id="@+id/site_name_description"
          android:contentDescription="@string/site_name_description"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/field_info"
          android:background="?android:attr/selectableItemBackground" />
      </LinearLayout>
      <EditText android:id="@+id/site_name_field"
        android:tag="@string/site_name_tag"
        android:hint="@string/site_name_hint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textAppearance="?android:attr/textAppearanceMediumInverse" />
    <!-- Site.lookAndFeel field -->
      <LinearLayout android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" >
        <TextView android:id="@+id/site_description_label"
        	android:contentDescription="@string/site_description_label"
          android:tag="@string/site_description_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="left"
          style="?android:attr/textAppearanceMedium"
          android:textIsSelectable="true"
          android:textColor="#ffffff" />
        <ImageButton android:id="@+id/site_description_description"
          android:contentDescription="@string/site_description_description"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/field_info"
          android:background="?android:attr/selectableItemBackground" />
      </LinearLayout>
      <EditText android:id="@+id/site_description_field"
        android:tag="@string/site_description_tag"
        android:hint="@string/site_description_hint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textAppearance="?android:attr/textAppearanceMediumInverse" />
	</LinearLayout>
</ScrollView>